--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,6 +65,10 @@
   }
 }
 
+main {
+  @apply rounded-lg border-gray-700 p-5 md:border;
+}
+
 main,
 nav {
   animation: fadeIn 1000ms forwards;
@@ -76,5 +80,30 @@ nav {
   }
   to {
     opacity: 1;
+  }
+}
+
+@layer utilities {
+  .masonry {
+    column-count: 1;
+    column-gap: 1rem;
+  }
+
+  @media (min-width: 640px) {
+    .masonry {
+      column-count: 2;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    .masonry {
+      column-count: 3;
+    }
+  }
+
+  @media (min-width: 1280px) {
+    .masonry {
+      column-count: 4;
+    }
   }
 }
