feat: added some animations & posthog conditional render

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,14 +71,16 @@ main {
 
 main,
 nav {
-  animation: fadeIn 1000ms forwards;
+  animation: blurIn 1000ms forwards;
 }
 
-@keyframes fadeIn {
+@keyframes blurIn {
   from {
+    filter: blur(10px);
     opacity: 0;
   }
   to {
+    filter: blur(0);
     opacity: 1;
   }
 }
